Try to fix width on mobile device

--- a/internalstyle.css
+++ b/internalstyle.css
@@ -1,3 +1,9 @@
+
+.container{
+width:100%;
+
+}
+
 body {
     background-color: #e9ecef;
     
